# AndroidPdfViewer

./: build.gradle  gradle.properties  settings.gradle
AhmerPdfium/: build.gradle
AhmerPdfium/src/main/cpp/: CMakeLists.txt  mainJNILib.cpp
AhmerPdfium/src/main/cpp/include/: fpdf_formfill.h  fpdfview.h
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/: PdfiumCore.java
android-pdf-viewer/: build.gradle
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/: BreakIteratorHelper.java  DecodingAsyncTask.java  DragPinchManager.java  PDFSelectionView.java  PDFView.java  PagesLoader.java  PdfFile.java  PdfPage.java  SearchDrawer.java  SearchRecord.java  SearchRecordItem.java  SelectionDrawer.java  Word.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/listener/: OnSelection.java  OnSelectionListener.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/model/: LinkTapEvent.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/scroll/: DefaultScrollHandle.java  ScrollHandle.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/source/: AssetSource.java  ByteArraySource.java  DocumentSource.java  FileSource.java  InputStreamSource.java  UriSource.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/util/: PageSizeCalculator.java  PdfUtils.java
gradle/wrapper/: gradle-wrapper.properties
pdfium-android/: build.gradle
pdfium-android/src/main/java/com/shockwave/pdfium/: PdfiumCore.java
pdfium-android/src/main/jni/: Application.mk
pdfium-android/src/main/jni/include/: fpdf_text.h
pdfium-android/src/main/jni/src/: mainJNILib.cpp
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/github/barteksc/sample/: PDFViewActivity.java
sample/src/main/res/layout/: activity_main.xml
